[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/player-standing.png" type="Texture" id=2]
[ext_resource path="res://Images/player-arm.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 32 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.162048, 0.921875, 0.334197, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[node name="Player" type="KinematicBody2D" groups=[
"Persist",
]]

transform/pos = Vector2( 512, 300 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.1
script/script = ExtResource( 1 )
coins = 0
keys = 0
gun_unlocked = false
max_jumps = 1
max_health = 100
speed = 450
jump_height = 800
bullet_count = 20

[node name="PlayerArea" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Collision" type="CollisionShape2D" parent="PlayerArea"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]

transform/rot = 90.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gun" type="Sprite" parent="."]

transform/pos = Vector2( -1.46823, 2.44757 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="HealthBar" type="ProgressBar" parent="Camera2D/CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 12.0
margin/right = 206.0
margin/bottom = 46.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="GunPanel" type="Panel" parent="Camera2D/CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 79.0
margin/right = 206.0
margin/bottom = 104.0
custom_styles/panel = SubResource( 4 )

[node name="BulletCounter" type="Label" parent="Camera2D/CanvasLayer/GunPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 96.0
margin/top = 6.0
margin/right = 190.0
margin/bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100 bullets"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="GunIndicator" type="Label" parent="Camera2D/CanvasLayer/GunPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 6.0
margin/right = 76.0
margin/bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pistol"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="GeneralPanel" type="Panel" parent="Camera2D/CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 50.0
margin/right = 206.0
margin/bottom = 75.0
custom_styles/panel = SubResource( 4 )

[node name="CoinCounter" type="Label" parent="Camera2D/CanvasLayer/GeneralPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 6.0
margin/right = 97.0
margin/bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0 coins"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="KeyCounter" type="Label" parent="Camera2D/CanvasLayer/GeneralPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 97.0
margin/top = 6.0
margin/right = 191.0
margin/bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0 keys"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}


